--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,5 +3,12 @@
     <div class="navbar-header">
       <%= link_to "Anime Vietsub Update", root_url, class: 'navbar-brand' %>
     </div>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Fansubs", fansubs_path %></li>
+        <li><%= link_to "New Fansub", new_fansub_path %></li>
+      </ul>
+    </div>
   </div>
 </nav>
