--- a/app/views/fansubs/edit.html.erb
+++ b/app/views/fansubs/edit.html.erb
@@ -23,39 +23,22 @@
     <h1>Fansub Tag</h1>
     <% if @fansub.tag.nil? %>
       <%= form_for @tag, url: fansub_tags_path(@fansub) do |f| %>
-        <div class="form-group">
-          <%= f.label :title %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :image_url %>
-          <%= f.text_field :image_url, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :public_date %>
-          <%= f.text_field :public_date, class: 'form-control' %>
-        </div>
+        <%= render 'tags/fields', f: f %>
         <div class="form-group">
           <%= f.submit "Create Tag", class: 'btn btn-primary' %>
         </div>
-        <%=  %>
+        <div class="form-group">
+          <%= render 'shared/error_messages', object: f.object %>
+        </div>
       <% end %>
     <% else %>
-      <%= form_for @tag, url: edit_fansub_tag_path(@fansub, @tag) do |f| %>
-        <div class="form-group">
-          <%= f.label :title %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :image_url %>
-          <%= f.text_field :image_url, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :public_date %>
-          <%= f.text_field :public_date, class: 'form-control' %>
-        </div>
+      <%= form_for @tag, url: fansub_tag_path(@fansub, @tag) do |f| %>
+        <%= render 'tags/fields', f: f %>
         <div class="form-group">
           <%= f.submit "Update Tag", class: 'btn btn-primary' %>
+        </div>
+        <div class="form-group">
+          <%= render 'shared/error_messages', object: f.object %>
         </div>
       <% end %>
     <% end %>
