--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,6 +8,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Fansubs", fansubs_path %></li>
         <li><%= link_to "New Fansub", new_fansub_path %></li>
+        <li><%= link_to "Force Craw", craw_path %></li>
       </ul>
     </div>
   </div>
