--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,10 @@
 <div class="row">
   <div class="col-md-12">
     <% @posts.each do |post| %>
-      <h3><%= post.title %></h3>
-      <img src="<%= post.image %>"></img>
+      <h3><%= link_to post.title, post.link %></h3>
+      <% if post.image %>
+      <img src="<%= post.image %>" width="600" height="300"></img>
+      <% end %>
       <p>
         Public: <%= post.public %>
       </p>
