--- a/app/views/tags/_fields.html.erb
+++ b/app/views/tags/_fields.html.erb
@@ -7,6 +7,10 @@
   <%= f.text_field :title, class: 'form-control' %>
 </div>
 <div class="form-group">
+  <%= f.label :link %>
+  <%= f.text_field :link, class: 'form-control' %>
+</div>
+<div class="form-group">
   <%= f.label :image_url %>
   <%= f.text_field :image_url, class: 'form-control' %>
 </div>
