--- a/app/views/tags/_fields.html.erb
+++ b/app/views/tags/_fields.html.erb
@@ -15,6 +15,10 @@
   <%= f.text_field :image_url, class: 'form-control' %>
 </div>
 <div class="form-group">
+  <%= f.label :image_source %>
+  <%= f.text_field :image_source, class: 'form-control' %>
+</div>
+<div class="form-group">
   <%= f.label :public_date %>
   <%= f.text_field :public_date, class: 'form-control' %>
 </div>
